--- a/src/app/Asesor/add-asesor/add-asesor.component.html
+++ b/src/app/Asesor/add-asesor/add-asesor.component.html
@@ -1,3 +1,24 @@
-<p>
-  add-asesor works!
-</p>
+<div class="container col-md-6">
+  <div class="card">
+    <div class="card-header">
+      <h3>Agregar Asesor</h3>
+    </div>
+    <div class="card-body">
+      <form action="">
+        <div class="form-group">
+          <label for="">Nombre:</label>
+          <input [(ngModel)]="cliente.nombre" type="text" name="nombreadd" id="nombreadd" class="form-control"
+            placeholder="Nombre" aria-describedby="helpId">
+          <small id="helpIdnombreadd" class="text-muted">Ingresar nombre</small>
+        </div>
+        <div class="form-group">
+          <label for="">Especialidad:</label>
+          <input [(ngModel)]="cliente.especialidad" type="text" name="especialidadadd" id="direccionadd" class="form-control"
+            placeholder="especialidad" aria-describedby="helpId">
+          <small id="helpIdespecialidadadd" class="text-muted">Ingresar dirección</small>
+        </div>
+        <button (click)="Guardar(cliente)" class="btn btn-danger">Guardar</button>
+      </form>
+    </div>
+  </div>
+</div>
