--- a/src/app/Asesor/edit-asesor/edit-asesor.component.html
+++ b/src/app/Asesor/edit-asesor/edit-asesor.component.html
@@ -1,3 +1,20 @@
-<p>
-  edit-asesor works!
-</p>
+<div class="container col-md-6">
+  <div class="card">
+    <div class="card-header">
+      <h3>Modificar Datos</h3>
+    </div>
+    <div class="card-body">
+      <form action="" >
+        <div class="form-group">
+          <label for="">Nombre:</label>
+          <input [(ngModel)]="asesor.nombre" type="text" name="nombre"  class="form-control" >
+        </div>
+        <div class="form-group">
+          <label for="">Dirección:</label>
+          <input [(ngModel)]="asesor.especialidad" type="text" name="direccion"  class="form-control" >
+        </div>
+        <button (click)="Actualizar(asesor)" class="btn btn-danger">Guardar</button>
+      </form>
+    </div>
+  </div>
+</div>
