--- a/src/app/Consumo/edit-consumo/edit-consumo.component.html
+++ b/src/app/Consumo/edit-consumo/edit-consumo.component.html
@@ -1,3 +1,28 @@
-<p>
-  edit-consumo works!
-</p>
+<div class="container col-md-6">
+  <div class="card">
+    <div class="card-header">
+      <h3>Modificar Datos</h3>
+    </div>
+    <div class="card-body">
+      <form action="" >
+        <div class="form-group">
+          <label for="">Nombre:</label>
+          <input [(ngModel)]="consumo.tarjeta_id" type="text" name="nombre"  class="form-control" >
+        </div>
+        <div class="form-group">
+          <label for="">Dirección:</label>
+          <input [(ngModel)]="consumo.monto" type="text" name="direccion"  class="form-control" >
+        </div>
+        <div class="form-group">
+          <label for="">Dirección:</label>
+          <input [(ngModel)]="consumo.descripcion" type="text" name="ciudad"  class="form-control" >
+        </div>
+        <div class="form-group">
+          <label for="">Dirección:</label>
+          <input [(ngModel)]="consumo.fecha" type="text" name="telefono"  class="form-control" >
+        </div>
+        <button (click)="Actualizar(consumo)" class="btn btn-danger">Guardar</button>
+      </form>
+    </div>
+  </div>
+</div>
