--- a/src/app/Consumo/listar-consumo/listar-consumo.component.html
+++ b/src/app/Consumo/listar-consumo/listar-consumo.component.html
@@ -1,3 +1,33 @@
-<p>
-  listar-consumo works!
-</p>
+<div class="container col-md-12">
+  <div class="card">
+    <div class="card-header">
+      <h3>Lista de Consumo</h3>
+    </div>
+    <div class="table-responsive">
+     <table class="table table-hover">
+        <thead>
+          <tr>
+            <th>TARJETA</th>
+            <th>MONTO</th>
+            <th>DESCRIPCION</th>
+            <th>FECHA</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr *ngFor="let consumo of consumos" class="text-center" >
+            <td > {{consumo.tarjeta_id}} </td>
+            <td > {{consumo.monto}} </td>
+            <td > {{consumo.descripcion}} </td>
+            <td > {{consumo.fecha}} </td>
+            <td>
+            <button (click)="Editar(consumo)" class="btn btn-warning">Editar</button>
+            <button  (click)="Delete(consumo)" class="btn btn-danger" style="margin-left: 10px;">Delete</button>
+            </td>
+
+          </tr>
+
+        </tbody>
+      </table>
+    </div>
+  </div>
+</div>
