--- a/src/app/Tarjeta/edit-tarjeta/edit-tarjeta.component.html
+++ b/src/app/Tarjeta/edit-tarjeta/edit-tarjeta.component.html
@@ -1,3 +1,28 @@
-<p>
-  edit-tarjeta works!
-</p>
+<div class="container col-md-6">
+  <div class="card">
+    <div class="card-header">
+      <h3>Modificar Datos</h3>
+    </div>
+    <div class="card-body">
+      <form action="" >
+        <div class="form-group">
+          <label for="">Nombre:</label>
+          <input [(ngModel)]="tarjeta.id" type="text" name="nombre"  class="form-control" >
+        </div>
+        <div class="form-group">
+          <label for="">Dirección:</label>
+          <input [(ngModel)]="tarjeta.cliente_id" type="text" name="direccion"  class="form-control" >
+        </div>
+        <div class="form-group">
+          <label for="">Dirección:</label>
+          <input [(ngModel)]="tarjeta.tipo" type="text" name="ciudad"  class="form-control" >
+        </div>
+        <div class="form-group">
+          <label for="">Dirección:</label>
+          <input [(ngModel)]="tarjeta.ccv" type="text" name="telefono"  class="form-control" >
+        </div>
+        <button (click)="Actualizar(tarjeta)" class="btn btn-danger">Guardar</button>
+      </form>
+    </div>
+  </div>
+</div>
