--- a/src/app/Tarjeta/add-tarjeta/add-tarjeta.component.html
+++ b/src/app/Tarjeta/add-tarjeta/add-tarjeta.component.html
@@ -7,7 +7,7 @@
       <form action="">
         <div class="form-group">
           <label for="">tarjeta_id:</label>
-          <input [(ngModel)]="tarjeta.tarjeta_id" type="text" name="tarjeta_idadd" id="tarjeta_idadd" class="form-control"
+          <input [(ngModel)]="tarjeta.id" type="text" name="tarjeta_idadd" id="tarjeta_idadd" class="form-control"
             placeholder="Nombre" aria-describedby="helpId">
           <small id="helpIdtarjeta_idadd" class="text-muted">Ingresar tarjeta_id</small>
         </div>
