--- a/src/app/Tarjeta/edit-tarjeta/edit-tarjeta.component.html
+++ b/src/app/Tarjeta/edit-tarjeta/edit-tarjeta.component.html
@@ -6,20 +6,20 @@
     <div class="card-body">
       <form action="" >
         <div class="form-group">
-          <label for="">Nombre:</label>
-          <input [(ngModel)]="tarjeta.id" type="text" name="nombre"  class="form-control" >
+          <label for="">Id:</label>
+          <input [(ngModel)]="tarjeta.id" type="text" name="id"  class="form-control" >
+        </div>
+        <div class="form-group">
+          <label for="">Cliente:</label>
+          <input [(ngModel)]="tarjeta.cliente_id" type="text" name="cliente_id"  class="form-control" >
+        </div>
+        <div class="form-group">
+          <label for="">Tipo:</label>
+          <input [(ngModel)]="tarjeta.tipo" type="text" name="tipo"  class="form-control" >
         </div>
         <div class="form-group">
           <label for="">Dirección:</label>
-          <input [(ngModel)]="tarjeta.cliente_id" type="text" name="direccion"  class="form-control" >
-        </div>
-        <div class="form-group">
-          <label for="">Dirección:</label>
-          <input [(ngModel)]="tarjeta.tipo" type="text" name="ciudad"  class="form-control" >
-        </div>
-        <div class="form-group">
-          <label for="">Dirección:</label>
-          <input [(ngModel)]="tarjeta.ccv" type="text" name="telefono"  class="form-control" >
+          <input [(ngModel)]="tarjeta.ccv" type="text" name="ccv"  class="form-control" >
         </div>
         <button (click)="Actualizar(tarjeta)" class="btn btn-danger">Guardar</button>
       </form>
